--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,14 +1,14 @@
 <div
   class="flex min-h-screen flex-row bg-gray-100 dark:bg-gray-900 dark:text-gray-100"
 >
-  <div class="min-h-screen w-1/3">
+  <div class="h-screen w-1/3 overflow-hidden">
     <app-rank-component [ranking]="ranking"></app-rank-component>
     <app-team-schedule-component
       [teamKey]="teamKey"
       [matches]="matches"
     ></app-team-schedule-component>
   </div>
-  <div class="min-h-screen grow">
+  <div class="h-screen grow overflow-auto">
     <div *ngIf="!noTwitch" id="twitch-container" class="h-3/5 w-full p-4"></div>
     <app-event-schedule-component
       [matches]="upcomingMatches"
