--- a/src/app/event/event-schedule-component/event-schedule-component.component.html
+++ b/src/app/event/event-schedule-component/event-schedule-component.component.html
@@ -1,5 +1,6 @@
 <div
   class="m-4 overflow-auto rounded border border-gray-200 bg-white dark:border-gray-700 dark:bg-gray-800"
+  style="max-height: 98vh"
 >
   <table class="min-w-full whitespace-nowrap align-middle text-sm">
     <tbody>
