--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,17 +1,41 @@
-<div
-  class="flex min-h-screen flex-row bg-gray-100 dark:bg-gray-900 dark:text-gray-100"
->
-  <div class="h-screen w-1/3 overflow-hidden">
-    <app-rank-component [ranking]="ranking"></app-rank-component>
-    <app-team-schedule-component
-      [teamKey]="teamKey"
-      [matches]="matches"
-    ></app-team-schedule-component>
+<div class="flex flex-col">
+  <div
+    class="flex grow flex-row bg-gray-100 dark:bg-gray-900 dark:text-gray-100"
+    style="height: 95vh"
+  >
+    <div class="h-screen w-1/3 overflow-hidden" style="height: 95vh">
+      <app-rank-component [ranking]="ranking"></app-rank-component>
+      <app-team-schedule-component
+        [teamKey]="teamKey"
+        [matches]="matches"
+      ></app-team-schedule-component>
+    </div>
+    <div class="h-screen grow overflow-auto" style="height: 95vh">
+      <div
+        *ngIf="!noTwitch"
+        id="twitch-container"
+        class="h-3/5 w-full p-4"
+      ></div>
+      <app-event-schedule-component
+        [matches]="upcomingMatches"
+      ></app-event-schedule-component>
+    </div>
   </div>
-  <div class="h-screen grow overflow-auto">
-    <div *ngIf="!noTwitch" id="twitch-container" class="h-3/5 w-full p-4"></div>
-    <app-event-schedule-component
-      [matches]="upcomingMatches"
-    ></app-event-schedule-component>
+  <div
+    class="m-2 ml-4 mr-4 flex flex-col overflow-hidden rounded-lg bg-white p-3 text-end shadow-sm dark:bg-gray-800 dark:text-gray-100"
+  >
+    <p>
+      Developed by
+      <a href="https://www.team930.com" class="text-blue-600" target="_blank"
+        >FRC 930</a
+      >
+      - Inspired by
+      <a
+        href="https://github.com/3015RangerRobotics/2023Public"
+        class="text-blue-600"
+        target="_blank"
+        >FRC 3015's Pit Dashboard</a
+      >
+    </p>
   </div>
 </div>
