--- a/src/app/event/team-schedule-component/team-schedule-component.component.html
+++ b/src/app/event/team-schedule-component/team-schedule-component.component.html
@@ -1,24 +1,27 @@
 <div
-  class="m-4 overflow-auto rounded border border-gray-200 bg-white dark:border-gray-700 dark:bg-gray-800"
-  style="max-height: 65vh"
+  class="m-4 overflow-auto rounded border border-gray-700 bg-gray-800"
+  style="height: 64vh"
 >
   <table class="min-w-full whitespace-nowrap align-middle">
     <tbody>
       <tr *ngFor="let match of matches" [class]="rowBackground(match)">
         <td [class]="matchScoreBackground(match)">{{ matchNumber(match) }}</td>
-        <td class="p-3 text-xl text-red-500">
+        <td class="text-l p-3 text-red-500">
           {{ allianceString(match.alliances.red.team_keys) }}
         </td>
-        <td class="p-3 text-xl text-blue-500">
+        <td class="text-l p-3 text-blue-500">
           {{ allianceString(match.alliances.blue.team_keys) }}
         </td>
-        <td class="p-3 text-2xl">
-          <div *ngIf="match.winning_alliance !== ''" class="flex flex-row">
-            <div class="pr-1 text-2xl text-red-500">
+        <td class="p-3 text-xl">
+          <div
+            *ngIf="match.actual_time && match.alliances.blue.score !== -1"
+            class="flex flex-row"
+          >
+            <div class="pr-1 text-xl text-red-500">
               {{ match.alliances.red.score }}
             </div>
             -
-            <div class="pl-1 text-2xl text-blue-500">
+            <div class="pl-1 text-xl text-blue-500">
               {{ match.alliances.blue.score }}
             </div>
           </div>
