--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div
   id="page-container"
-  class="mx-auto flex min-h-screen w-full min-w-[320px] flex-col bg-gray-100 dark:bg-gray-900 dark:text-gray-100"
+  class="mx-auto flex min-h-screen w-full min-w-[320px] flex-col bg-gray-900 text-gray-100"
 >
   <!-- <aside
     id="page-sidebar"
