--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col">
   <div
-    class="flex grow flex-row bg-gray-100 dark:bg-gray-900 dark:text-gray-100"
-    style="height: 95vh"
+    class="flex grow flex-row bg-gray-900 text-gray-100"
+    style="height: 94vh"
   >
     <div class="h-screen w-1/3 overflow-hidden" style="height: 95vh">
       <app-rank-component [ranking]="ranking"></app-rank-component>
@@ -17,14 +17,16 @@
         class="h-3/5 w-full p-4"
       ></div>
       <app-event-schedule-component
+        [lastMatches]="lastMatches"
         [matches]="upcomingMatches"
       ></app-event-schedule-component>
     </div>
   </div>
   <div
-    class="m-2 ml-4 mr-4 flex flex-col overflow-hidden rounded-lg bg-white p-3 text-end shadow-sm dark:bg-gray-800 dark:text-gray-100"
+    class="m-2 ml-4 mr-4 flex flex-row overflow-hidden rounded-lg border border-gray-700 bg-gray-800 p-3 text-end text-gray-100 shadow-sm"
   >
-    <p>
+    <img height="50" width="50" src="assets/logo.png" />
+    <p class="grow">
       Developed by
       <a href="https://www.team930.com" class="text-blue-600" target="_blank"
         >FRC 930</a
