--- a/src/app/event/rank-component/rank-component.component.html
+++ b/src/app/event/rank-component/rank-component.component.html
@@ -1,5 +1,5 @@
 <div
-  class="m-4 flex flex-col overflow-hidden rounded-lg bg-white shadow-sm dark:bg-gray-800 dark:text-gray-100"
+  class="m-4 flex flex-col overflow-hidden rounded-lg border border-gray-700 bg-gray-800 text-gray-100 shadow-sm"
 >
   <div class="p-5">
     <div class="mb-10 text-center text-6xl font-semibold tracking-tight">
