--- a/src/app/event/rank-component/rank-component.component.html
+++ b/src/app/event/rank-component/rank-component.component.html
@@ -3,7 +3,7 @@
 >
   <div class="p-5">
     <div class="mb-10 text-center text-6xl font-semibold tracking-tight">
-      Rank {{ ranking?.qual?.ranking?.rank ?? "0" }}
+      {{ rank() }}
     </div>
     <div class="mb-10 flex flex-row">
       <div class="grow text-center text-4xl font-semibold">
