--- a/src/app/event/team-schedule-component/team-schedule-component.component.html
+++ b/src/app/event/team-schedule-component/team-schedule-component.component.html
@@ -1,6 +1,6 @@
 <div
   class="m-4 overflow-auto rounded border border-gray-700 bg-gray-800"
-  style="height: 64vh"
+  style="max-height: 50vh"
 >
   <table class="min-w-full whitespace-nowrap align-middle">
     <tbody>
