scrolling is trash

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div
   id="page-container"
-  class="mx-auto flex min-h-screen w-full min-w-[320px] flex-col bg-gray-900 text-gray-100"
+  class="flex min-h-screen w-full min-w-[320px] flex-col bg-gray-900 text-gray-100"
 >
   <!-- <aside
     id="page-sidebar"
@@ -60,7 +60,7 @@
       </nav>
     </div>
   </aside> -->
-  <main id="page-content" class="flex max-w-full flex-auto flex-col">
+  <main id="page-content" class="flex max-w-full">
     <div class="max-w-10xl mx-auto w-full">
       <router-outlet></router-outlet>
     </div>
