--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,19 +1,18 @@
-<div class="flex flex-col">
-  <div
-    class="flex grow flex-row bg-gray-900 text-gray-100"
-    style="height: 94vh"
-  >
-    <div class="h-screen w-1/3 overflow-hidden" style="height: 95vh">
+<div class="m-2 flex flex-col overflow-hidden">
+  <div class="flex flex-row bg-gray-900 text-gray-100">
+    <div class="flex w-1/3 flex-col overflow-hidden" style="height: 94vh">
       <app-rank-component
         [ranking]="ranking"
         [brianMode]="brianMode"
       ></app-rank-component>
-      <app-team-schedule-component
-        [teamKey]="teamKey"
-        [matches]="matches"
-      ></app-team-schedule-component>
+      <div class="grow overflow-auto">
+        <app-team-schedule-component
+          [teamKey]="teamKey"
+          [matches]="matches"
+        ></app-team-schedule-component>
+      </div>
     </div>
-    <div class="h-screen grow overflow-auto" style="height: 95vh">
+    <div class="grow" style="height: 94vh">
       <div
         *ngIf="!noTwitch"
         id="twitch-container"
@@ -26,7 +25,7 @@
     </div>
   </div>
   <div
-    class="m-2 ml-4 mr-4 flex flex-row overflow-hidden rounded-lg border border-gray-700 bg-gray-800 p-3 text-end text-gray-100 shadow-sm"
+    class="ml-3 mr-3 flex flex-row rounded-lg border border-gray-700 bg-gray-800 p-3 text-end text-gray-100 shadow-sm"
   >
     <img height="50" width="50" src="assets/logo.png" />
     <p class="grow">
