--- a/src/app/event/team-schedule-component/team-schedule-component.component.html
+++ b/src/app/event/team-schedule-component/team-schedule-component.component.html
@@ -1,7 +1,4 @@
-<div
-  class="m-4 overflow-auto rounded border border-gray-700 bg-gray-800"
-  style="max-height: 50vh"
->
+<div class="m-4 overflow-auto rounded border border-gray-700 bg-gray-800">
   <table class="min-w-full whitespace-nowrap align-middle">
     <tbody>
       <tr *ngFor="let match of matches" [class]="rowBackground(match)">
